# GSW-2021

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  build_proj  install  setenv
app/: CMakeLists.txt  Makefile  view_log.sh
app/InfluxDB/: Makefile
app/InfluxDB/fwd_influx/: Makefile  clear_influx.sh  fwd_influx
app/InfluxDB/fwd_influx/src/: main.cpp
app/InfluxDB/grafana/: Makefile  SET_REFRESH_RATE  edit_config.sh  grafana.ini  index.html  install.sh  remove-video-files.sh  reset_admin_pwd.sh  start-live-stream.sh  start.sh  stop.sh
app/InfluxDB/grafana/dashboards/: spica.json  test-1612050140182.json  test-1612716823893.json  test.json
app/InfluxDB/grafana/lib/: videojs-http-streaming.js
app/InfluxDB/influx_fwd/: Makefile
app/InfluxDB/run_influx/: .influx.txt.swp  Makefile  influx.txt  influx_install.txt  install.sh
app/InfluxDB/run_influx/test/: Makefile
app/clock_ctrl/: Makefile  clock_ctrl
app/clock_ctrl/src/: main.cpp
app/clock_view/: Makefile  clock_view
app/clock_view/src/: main.cpp
app/db/: .test_line_protocol.py.swp  Makefile  README  influx_install
app/db/chronograf/: install
app/db/fwd/: IDEA  Makefile
app/db/fwd/src/: main.cpp
app/db/fwd_influx/: Makefile  clear_influx.sh  fwd_influx
app/db/fwd_influx/src/: main.cpp
app/db/fwd_log/: Makefile  fwd_logs.sh  send_udp_logs.py
app/db/grafana/: Makefile  grafana_pids  install.sh  remote_start.sh  remote_stop.sh  start.sh  stop.sh
app/db/grafana/dashboards/: 3cat2.json  FL-1-Control.json  Fl-1-Monitor.json  daq.json  engine_controller.json  engine_controller_mobile.json  ksp_sim.json  void.json
app/db/grafana/scripts/: reset_admin_pwd.sh
app/db/run_db/: Makefile  run_influx.sh
app/db/run_influx/: Makefile  influx_pids  influxdb.conf  remote_run.sh  run_influx.sh
app/db/test/: test_line_protocol.py
app/http_server/: Makefile  apps  http_server.py  setup_links.py
app/http_server/links/: change_mode  clock_ctrl  ec_cmd  ec_program  log_ctrl  set_safing
app/json_convert/: Makefile  listener.py
app/json_convert/src/: main.cpp
app/ksp/: Makefile  fl1_ksp.py  install.sh  ksp2fl1.py
app/launch_openmct/cbeam_config/: rocket.js
app/log/src/: main.cpp
app/log_view/: Makefile  log_view
app/log_view/src/: main.cpp
app/map/: CreateLink.py  GPSTrack.py  Makefile  print_gps  run.sh
app/map/src/: print_gps.cpp
app/mem_view/: Makefile  mem_view
app/mem_view/src/: main.cpp
app/nview/: Makefile
app/nview/src/: listview.cpp  listview.h  main.cpp
app/print_meas/: Makefile  ascii_plot.sh  print_meas
app/print_meas/src/: main.cpp
app/processing/: Sample_UI.pde
app/propulsion/: Makefile  ec_server.py
app/propulsion/FL-1/: Makefile  README.txt  change_mode.py  set_safing.py
app/propulsion/ec_cmd/: Makefile  ec_cmd  spam.py
app/propulsion/ec_cmd/src/: main.cpp
app/propulsion/ec_program/: Makefile  ec_program  update_programs.py
app/propulsion/ec_program/programs/: .FL-1_hot-fire.ec.swp  3cat2.ec  FL-1_hot-fire.ec  shutoff_all.ec  simple1.ec  test_fire.ec
app/propulsion/ec_program/src/: main.cpp
app/sample_processing_app/: REQUIRES
app/val_view/: Makefile  val_view
app/val_view/src/: main.cpp
app/view_clock/src/: main.cpp
app/view_log/: Makefile
app/voice/: Makefile  speak.sh  voice_report
app/voice/src/: voice_report.cpp
app/xbee/: Makefile
app/xbee/darwin/: Makefile
app/xbee/darwin/src/: main.cpp
app/xbee/xbee_bridge/: Makefile
app/xbee/xbee_bridge/src/: main.cpp
app/xbee_bridge/: Makefile  xbee_bridge
app/xbee_bridge/src/: main.cpp
lib/: CMakeLists.txt  Makefile
lib/calc/: Makefile
lib/calc/src/: calc.cpp
lib/clock/: Makefile
lib/clock/src/: clock.cpp
lib/convert/: Makefile
lib/convert/src/: convert.cpp
lib/daq/: Makefile
lib/daq/src/: sensors.cpp
lib/dev/: Makefile
lib/dev/serial/: Makefile
lib/dev/serial/src/: serial.c
lib/dev/xbee/: Makefile
lib/dev/xbee/src/: net.c  net.cpp  xbee.c  xbee.cpp
lib/dls/: Makefile
lib/dls/include/: dls.h  logger.h  message_logger.h  packet_logger.h
lib/dls/src/: Logger.cpp  MsgLogger.cpp  PacketLogger.cpp  dl_shm.cpp  dls.cpp
lib/ec/: Makefile
lib/ec/src/: ec.cpp
lib/ldms/: Makefile
lib/ldms/src/: ldms.cpp
lib/nm/: Makefile
lib/nm/src/: NmShm.cpp  nm.cpp
lib/python/: Makefile  bindings.cpp  telemetry.py
lib/shm/: Makefile
lib/shm/include/: shm.h
lib/shm/src/: shm.cpp
lib/telemetry/: Makefile
lib/telemetry/src/: TelemetryShm.cpp  TelemetryViewer.cpp  TelemetryWriter.cpp
lib/trigger/: Makefile
lib/trigger/src/: basic.cpp  trigger.cpp
lib/vcm/: Makefile
lib/vcm/src/: vcm.cpp
lib/vlock/: Makefile
lib/vlock/src/: vlock.cpp
proc/: CMakeLists.txt  Makefile
proc/decom/: Makefile  decom  launch
proc/decom/src/: decom.cpp
proc/decom/test/: udpclient.py  udpserv.py
proc/dlp/: Makefile  dlp
proc/dlp/src/: dlp.cpp
proc/mmon/: Makefile  mmon
proc/mmon/src/: main.cpp
proc/reaper/: Makefile  reaper
proc/reaper/src/: reaper.cpp
proc/shmctl/: Makefile  shmctl
proc/shmctl/src/: shmctl.cpp
proc/test/: Makefile
proc/test/mqueue_test/: Makefile  test
proc/test/mqueue_test/src/: test.cpp
proc/test/shmtest/: read_test  write_test
proc/test/shmtest/src/: shmread.cpp  shmwrite.cpp
proc/test/vcm_test/: Makefile  test
proc/test/vcm_test/src/: test.cpp
proc/test/vlock_test/: test
proc/tool/: Makefile
proc/tool/analysis/: Makefile  analysis  analysis.cpp
proc/tool/decom_test/: udpclient.py  udpserv.py
proc/tool/ec_sim/src/: ec_sim.cpp
proc/tool/log2csv/: Makefile  filter_logs.py  graph_logs.py  log2csv
proc/tool/log2influx/: Makefile  log2influx
proc/tool/log_ctrl/: Makefile  log_ctrl
proc/tool/mdns_publish/: Makefile  mdns_clean.sh  mdns_publish
proc/tool/mkshm/: Makefile
proc/tool/mqueue_test/: Makefile  test
proc/tool/shmtest/: Makefile  README  overload.py  read_test  write_test
proc/tool/vcm_test/: Makefile  test
proc/tool/vlock_test/: Makefile
proc/uplink/: Makefile  uplink
proc/uplink/src/: uplink.cpp
proc/vcalc/: Makefile
proc/vcalc/src/: main.cpp
(+113 files in other folders)
