set(CMAKE_C_FLAGS "-I${GSW_DIR}/include -Wall -Wextra -Wpedantic")
set(CMAKE_CXX_FLAGS "-I${GSW_DIR}/include -Wall -Wextra -Wpedantic -ggdb")

add_executable(clock_ctrl clock_ctrl/src/main.cpp)
add_executable(clock_view clock_view/src/main.cpp)
add_executable(fwd_influx db/fwd_influx/src/main.cpp)
add_executable(json_convert json_convert/src/main.cpp)
add_executable(log_view log_view/src/main.cpp)
add_executable(mem_view mem_view/src/main.cpp)
#add_executable(nview nview/src/main.cpp nview/src/listview.cpp) # TODO: We dont even use this app anyways 😛
add_executable(print_meas print_meas/src/main.cpp)
add_executable(ec_cmd propulsion/ec_cmd/src/main.cpp)
add_executable(ec_program propulsion/ec_program/src/main.cpp)
add_executable(val_view val_view/src/main.cpp)
add_executable(voice_report voice/src/voice_report.cpp)
add_executable(darwin xbee/darwin/src/main.cpp)
add_executable(xbee_bridge xbee/xbee_bridge/src/main.cpp)

# TODO: Figure out what to do with py files
target_link_libraries(clock_ctrl dls vcm telemetry convert clock shm)
target_link_libraries(clock_view dls vcm telemetry convert clock shm)
target_link_libraries(fwd_influx dls vcm telemetry clock shm convert pthread)
target_link_libraries(json_convert dls vcm telemetry convert shm )
target_link_libraries(log_view dls shm)
target_link_libraries(mem_view dls telemetry convert shm vcm)
#target_link_libraries(nview telemetry dls vcm convert shm pthread ${CURSES_LIBRARIES})
target_link_libraries(ec_cmd dls telemetry nm convert vlock shm vcm)
target_link_libraries(ec_program dls telemetry nm convert vlock shm clock vcm)
target_link_libraries(print_meas dls vcm telemetry shm convert)
target_link_libraries(val_view dls vcm telemetry convert shm)
target_link_libraries(voice_report dls vcm telemetry shm convert)
target_link_libraries(darwin dls shm vcm serial xbee)
target_link_libraries(xbee_bridge dls shm vcm xbee serial)