set(CMAKE_C_FLAGS "-I${GSW_DIR}/include -Wall -Wpedantic -fpic")
set(CMAKE_CXX_FLAGS "-I${GSW_DIR}/include -Wall -Wpedantic -fpic -ggdb")

add_library(clock SHARED clock/src/clock.cpp)
add_library(convert SHARED convert/src/convert.cpp)
add_library(daq SHARED daq/src/sensors.cpp)
#add_library(serial SHARED dev/serial/src/serial.cpp)
#add_library(xbee SHARED dev/xbee/src/xbee.cpp dev/xbee/src/net.cpp)
add_library(dls SHARED dls/src/dl_shm.cpp dls/src/Logger.cpp dls/src/MsgLogger.cpp dls/src/PacketLogger.cpp)
add_library(ec SHARED ec/src/ec.cpp)
add_library(nm SHARED nm/src/nm.cpp nm/src/NmShm.cpp)
add_library(bindings SHARED python/bindings.cpp)
add_library(shm SHARED shm/src/shm.cpp)
add_library(telemetry SHARED telemetry/src/TelemetryShm.cpp telemetry/src/TelemetryViewer.cpp telemetry/src/TelemetryWriter.cpp)
add_library(trigger SHARED trigger/src/trigger.cpp trigger/src/basic.cpp)
add_library(vcm SHARED vcm/src/vcm.cpp)
add_library(vlock SHARED vlock/src/vlock.cpp)

target_link_libraries(dls rt)
target_link_libraries(ec rt)
target_link_libraries(nm rt)
target_link_libraries(shm pthread rt)